# rt-voice-assistant

./: .env.sample  .gitignore  README.md  cli  continuous_recording.py  kokoro.http  kokoro_onnx_api.py  kokoro_onnx_sample.py  main.py  pyproject.toml  step-by-step.md
doc/slides/: LocalFirst Real Time Voice Assistant.excalidraw.md  Presentation.md  index.html  package.json  slides-custom.css
rt-voice-assistant/: package-lock.json  package.json
rt-voice-assistant/src/: App.tsx
rt-voice-assistant/src/services/: ttsApi.ts
rt_py/: api.py
rt_py/bricks/: audio.py  frame_processor.py  listen.py  llm.py  stt.py  stt_openaiwhisper.py  stt_whisper_cpp.py  stt_whisperx.py  tts.py  vad_webrtc.py
rt_py/cli/: __main__.py  ask.py  listen.py  record_voice.py  say.py  transcribe.py  vad.py
rt_voice_assistant/: api.py
rt_voice_assistant/bricks/: audio.py  listen.py  llm.py  sample_callbacks.py  tts.py
rt_voice_assistant/bricks/stt/: openaiwhisper.py  whispercpp.py
rt_voice_assistant/bricks/vad/: silero.py  webrtc.py
rt_voice_assistant/cli/: __main__.py  ask.py  record_voice.py  say.py  transcribe.py
rt_voice_assistant/qa/: api.http
rt_voice_assistant/test/: test_whisper_cpp.py
sample-web-client/src/: App.css  App.tsx  Assistant.tsx  Transcribe.tsx
sample-web-client/src/examples/: apiUsage.ts
sample-web-client/src/services/: ttsApi.ts  (+1 more)
terraform/: .gitignore  .terraform.lock.hcl  firewall.tf  hetzner.sample.tfvars  outputs.tf  provider.tf  server.tf  ssh.tf  tailscale.sample.tfvars  user_data.yml  variables.tf
terraform/configuration/: .env.sample  devops
(+2 files in other folders)
