[project]
name = "rt-voice-assistant"
version = "0.1.0"
description = "Code backing the \"Build Your own Real Time Voice Assistant\" PyConFR25 Workshop"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kokoro-onnx>=0.4.9",
    "numpy>=2.3.2",
    "onnxruntime>=1.22.1",
    "setuptools<81",
    "silero-vad>=5.1.2",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
    "webrtcvad>=2.0.10; platform_machine == 'arm64' or platform_machine == 'aarch64'",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "requests>=2.31.0",
    "pydantic>=2.11.7",
    "whisperx>=3.4.2",
    "openai>=1.101.0",
    "tiktoken>=0.11.0",
    "python-multipart>=0.0.20",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.11",
]
